Project section and below

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Campus Manager</div>
-            <p>•	Trained to be an entrepreneurial minded student who helps sell apparel on my college campus for custom apparel company, Fresh Prints.</p>
+            <p>Trained to be an entrepreneurial minded student who helps sell apparel on my college campus for custom apparel company, Fresh Prints.</p>
           </div>
         </div>
       </div>
@@ -189,8 +189,8 @@
         <div class="h4 text-center mb-4 title">Dance</div>
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa" aria-hidden="true"style="font-size:15px;color:black"><p>photos</p></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa" aria-hidden="true"style="font-size:15px;color:black"><p>videos</p></i></a></li>
           </ul>
         </div>
       </div>
@@ -255,7 +255,7 @@
 
 <div class="section" id="reference">
   <div class="container cc-reference">
-    <div class="h4 mb-4 text-center title">References</div>
+    <div class="h4 mb-4 text-center title">Projects</div>
     <div class="card" data-aos="zoom-in">
       <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -266,34 +266,34 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
-                <div class="h5 pt-2">Aiyana</div>
-                <p class="category">CEO / WEBM</p>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/Logo1.jpeg" alt="Image"/>
+                <div class="h5 pt-2">Personal Website</div>
+                <p class="category"></p>
               </div>
-              <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
-                <div class="h5 pt-2">Braiden</div>
-                <p class="category">CEO / Creativem</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+              <div class="col-lg-10 col-md-9" style="font-size:16px">
+                <p>Worked in html to create this personal website displaying my resume, work, and contact information.</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>
-                <div class="h5 pt-2">Alexander</div>
-                <p class="category">CEO / Webnote</p>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/dict.jpg" alt="Image"/>
+                <div class="h5 pt-2">Dictionary Client</div>
+                <p class="category"></p>
               </div>
-              <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+              <div class="col-lg-10 col-md-9" style="font-size:16px">
+                <p> Used knowledge of threads and sockets by creating a multi-threaded client that supports dictionary protocol. This was a lab assignment in a course for school and resulted in a program where any word or phrase can be written in terminal to receive a dictionary synonym equivalent. This project was done in C and required knowledge of network connections, servers, and clients.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/cache.jpg" alt="Image"/>
+                <div class="h5 pt-2">Cache Simulator</div>
+                <p class="category"></p>
+              </div>
+              <div class="col-lg-10 col-md-9" style="font-size:16px">
+                <p> Used my understanding of cache memoies and the impact they have on performance to create a C program that simulates the behavior of cache memory. The program kept track of cache hits, misses, and evictions to simulate this behavior. My knowledge of the way memory works within the CPU and main memory developed through this project.</p>
               </div>
             </div>
           </div>
@@ -313,7 +313,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/your@email.com" method="POST">
+                    <form action="https://formspree.io/britestar006@gmail.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
