--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#resume">Resume</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#dance">Dance</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#About">About</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#Resume">Resume</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#Dance">Dance</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#Contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -49,7 +49,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="http://facebook.com/nyla.ivy" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="http://twitter.com/nyla_ivy" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="http://instagram.com/nylaivy" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -71,6 +71,7 @@
 </div>
 </div>
 </div>
+<div class="section" id="Resume">
 <div class="h4 text-center mb-4 title">Resume</div>
 <div class="h4 text-center mb-4 title">_____________________________________________________</div>
 <div class="section">
@@ -182,7 +183,7 @@
     </div>
   </div>
 </div>
-<div class="section" id="portfolio">
+<div class="section" id="Dance">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -253,7 +254,7 @@
   </div>
 </div>
 
-<div class="section" id="reference">
+<div class="section" id="Projects">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">Projects</div>
     <div class="card" data-aos="zoom-in">
@@ -302,7 +303,7 @@
     </div>
   </div>
 </div>
-<div class="section" id="contact">
+<div class="section" id="Contact">
   <div class="cc-contact-information" style="background-image: url('images/grey.jpg');">
     <div class="container">
       <div class="cc-contact">
@@ -369,11 +370,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Anthony Barnett</div>
-      <div class="text-center text-muted">
-        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
-      </div>
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="http://facebook.com/nyla.ivy"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="http://twitter.com/nyla_ivy"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="http://instagram.com/nylaivy"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js"></script>
     <script src="js/core/popper.min.js"></script>
