Completed new email, resume download, and dance icons

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         </div>
       </div>
     </div>
+    <p> <a style="font-size:15px;color:black" href=https://drive.google.com/file/d/1TixL2oKq6ovAcuvRmRGPyTb0DLo3W8qv/view?usp=sharing>Click here to download my full resume</li></p>
   </div>
 </div>
 <div class="section" id="Dance">
@@ -190,8 +191,8 @@
         <div class="h4 text-center mb-4 title">Dance</div>
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa" aria-hidden="true"style="font-size:15px;color:black"><p>photos</p></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa" aria-hidden="true"style="font-size:15px;color:black"><p>videos</p></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-tv" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </div>
@@ -314,7 +315,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/britestar006@gmail.com" method="POST">
+                    <form action="https://formspree.io/nylaivy.thompson@gmail.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
@@ -357,7 +358,7 @@
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+718-808-3597</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>nit1@williams.edu</p>
+                    <p>nylaivy.thompson@gmail.com</p>
                   </div>
                 </div>
               </div>
