--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <p>.</p></a>
             <p>.</p></a>
-          <p class="category text-white">College Student, Dancer,  and Future Business Woman</p></a>
+          <p class="category text-white">Business Consultant and Dancer</p></a>
 
         </div>
       </div>
