--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 </div>
 <div class="section" id="About">
-  <div class="center"><a href="#"><img src="images/headshot.png" alt="Image"/></a></div>
+  <div class="center"><a href="#"><img src="images/headshot.JPG" alt="Image"/></a></div>
   <div class="container">
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
