--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About Me</div>
-            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a college student in Williamstown Massachussetes from New York City. Currently studying abroad at Oxford University, so I am interested in any inquiries in London this year. I am an Economics and Computer Science double major at Williams College. Interested in dance, social impact work, marketing, product management, and consulting. I would love to be apart of any projects involving any of these fields so please <a href="https://templateflip.com/templates/creative-cv/" target="_blank">contact me.</a></p>
+            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a Business Consultant at a Big 4 consulting firm, Dancer/Choreographer and Content Creator from New York City. Interested in opportunities related to dance, social impact, and product management. Please feel free to <a href="nylaivy.thompson@gmail.com" target="_blank">contact me here</a> for any inquiries.</p>
 
     </div>
   </div>
@@ -81,15 +81,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>Present</p>
+            <p>2018 - 2019</p>
             <div class="h5">Study Abroad</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Year 3 of College</div>
+            <div class="h5">Williams Exeter Program at Oxford (WEPO)</div>
             <p class="category">Exeter College at Oxford University</p>
-            <p>Fully matriculated student at Oxford University for a year of higher education.</p>
+            <p>Attended Oxford University as a fully matriculated student at Exeter College for Junior Year of undergrad.</p>
           </div>
         </div>
       </div>
@@ -98,15 +98,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2016 - Present</p>
+            <p>2016 - 2020</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Economics & Computer Science</div>
+            <div class="h5">Bachelor of Arts</div>
             <p class="category">Williams College</p>
-            <p>Economics and Computer Science double major at Williams College. Coursework for majors include Econometrics and Data Structures and Advanced Programming. In addition, coursework in Sociology, Africana Studies, and Dance were taken. Involved in leadership positions in the school's contemporary and hip hop dance groups, as well as the admissions office.</p>
+            <p>Graduated as an Economics and Computer Science double major at Williams College. Coursework for majors include Human Computer Interaction, Solution Design, Data Structures and Behavioral Economics. Through the liberal arts curriculum, coursework in Sociology, Africana Studies, and Dance were also taken. Extracurriculars at Williams College include involvement in contemporary and hip hop dance groups, as well as The Admissions Office.</p>
           </div>
         </div>
       </div>
@@ -133,6 +133,38 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>August 2020 - Present</p>
+            <div class="h5">Ernst & Young</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Business Consultant</div>
+            <p>•Worked with various teams including the wavespace team facilitating strategy and innovation sessions for client leadership, a Technology Solutions Delivery team helping with the implementation of an accounting database, and a small business loan review team for the Payment Protection Program. Internal involvement includes Product Management training and an ideaLab challenge that strives to solve market problems for a client through innovative ideas.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>June 2019 - August 2019</p>
+            <div class="h5">Ernst & Young</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Business Consultant Intern</div>
+            <p>•	Helped a client by working closely with senior management on an anti-money laundering engagement. Tasks included internal metrics, case tracking, and other organizational assignments to help with productivity for a team of 30 people.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -203,6 +235,12 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
+                  <figure class="cc-effect"><img src="images/Dance 10_2.jpg" alt="Image"/>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
+                  <figure class="cc-effect"><img src="images/Dance 12.jpg" alt="Image"/>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
                   <figure class="cc-effect"><img src="images/Dance 1.jpg" alt="Image"/>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
@@ -216,6 +254,12 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
+                  <figure class="cc-effect"><img src="images/Dance 11.jpg" alt="Image"/>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
+                  <figure class="cc-effect"><img src="images/Dance 13.jpg" alt="Image"/>
+                  </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/Dance 6.jpg" alt="Image"/>
                   </figure></a></div>
@@ -236,14 +280,14 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Q1buNJWwU1A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://youtu.be/gk926p1mPxc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/KHzaCpCU6dI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
           </div>
             <div class="row">
             <div class="col-md-6">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BazDtslcIe4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/TsBlWeGx14A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RCgRpV1FTCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
@@ -290,12 +334,12 @@
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/cache.jpg" alt="Image"/>
-                <div class="h5 pt-2">Cache Simulator</div>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/Res Logo.png" alt="Image"/>
+                <div class="h5 pt-2">RES Application Design Project</div>
                 <p class="category"></p>
               </div>
               <div class="col-lg-10 col-md-9" style="font-size:16px">
-                <p> Used my understanding of cache memoies and the impact they have on performance to create a C program that simulates the behavior of cache memory. The program kept track of cache hits, misses, and evictions to simulate this behavior. My knowledge of the way memory works within the CPU and main memory developed through this project.</p>
+                <p> Designed a mobile app for residential event spaces on a college campus with a team during my Human Computer Interaction elective during undergrad. Check out our project website <a href="https://hci-res.github.io/" target="_blank">HERE</a> .</p>
               </div>
             </div>
           </div>
