--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About Me</div>
-            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a Business Consultant at a Big 4 consulting firm, Dancer/Choreographer and Content Creator from New York City. Interested in opportunities related to dance, social impact, and product management. Please feel free to <a href="mailto:nylaivy.thompson@gmail.com" target="_blank">contact me here</a> for any inquiries.</p>
+            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a Business Consultant at a Big 4 consulting firm, Dancer/Choreographer and Content Creator from New York City. Interested in opportunities related to dance, social impact, and product management. Please feel free to <a href="nylaivy.thompson@gmail.com" target="_blank">contact me here</a> for any inquiries.</p>
 
     </div>
   </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Williams Exeter Program at Oxford (WEPO)</div>
+            <div class="h5">Williams Exeter Program at Oxford</div>
             <p class="category">Exeter College at Oxford University</p>
             <p>Attended Oxford University as a fully matriculated student at Exeter College for Junior Year of undergrad.</p>
           </div>
@@ -144,7 +144,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Business Consultant</div>
-            <p>•Worked with various teams including the wavespace team facilitating strategy and innovation sessions for client leadership, a Technology Solutions Delivery team helping with the implementation of an accounting database, and a small business loan review team for the Payment Protection Program. Internal involvement includes Product Management training and an ideaLab challenge that strives to solve market problems for a client through innovative ideas.</p>
+            <p>Worked with various teams including the wavespace team facilitating strategy and innovation sessions for client leadership, a Technology Solutions Delivery team helping with the implementation of an accounting database, and a small business loan review team for the Payment Protection Program. Internal involvement includes Product Management training and an ideaLab challenge that strives to solve market problems for a client through innovative ideas.</p>
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Business Consultant Intern</div>
-            <p>•	Helped a client by working closely with senior management on an anti-money laundering engagement. Tasks included internal metrics, case tracking, and other organizational assignments to help with productivity for a team of 30 people.</p>
+            <p>Helped a client by working closely with senior management on an anti-money laundering engagement. Tasks included internal metrics, case tracking, and other organizational assignments to help with productivity for a team of 30 people.</p>
           </div>
         </div>
       </div>
@@ -235,10 +235,10 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
-                  <figure class="cc-effect"><img src="images/Dance 10_2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Dance 10_2.JPG" alt="Image"/>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
-                  <figure class="cc-effect"><img src="images/Dance 12.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Dance 12.JPG" alt="Image"/>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
                   <figure class="cc-effect"><img src="images/Dance 1.jpg" alt="Image"/>
@@ -255,10 +255,10 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
-                  <figure class="cc-effect"><img src="images/Dance 11.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Dance 11.JPG" alt="Image"/>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" >
-                  <figure class="cc-effect"><img src="images/Dance 13.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Dance 13.JPG" alt="Image"/>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/Dance 6.jpg" alt="Image"/>
@@ -335,7 +335,7 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/Res Logo.png" alt="Image"/>
-                <div class="h5 pt-2">RES Application Design Project</div>
+                <div class="h5 pt-2">Application Design Project</div>
                 <p class="category"></p>
               </div>
               <div class="col-lg-10 col-md-9" style="font-size:16px">
