--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <iframe width="560" height="315" src="https://youtu.be/gk926p1mPxc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/gk926p1mPxc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/KHzaCpCU6dI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
           </div>
             <div class="row">
             <div class="col-md-6">
-            <iframe width="560" height="315" src="https://youtu.be/TsBlWeGx14A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TsBlWeGx14A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RCgRpV1FTCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
