--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           </div>
             <div class="row">
             <div class="col-md-6">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TsBlWeGx14A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gk926p1mPxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </figure></a></div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RCgRpV1FTCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </figure></a></div>
