--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="h4 text-center mb-4 title">_____________________________________________________</div>
 <div class="section">
   <div class="container cc-education">
-    <div class="h5 text-center" >Education</div>
+    <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -213,7 +213,7 @@
         </div>
       </div>
     </div>
-    <p> <a style="font-size:15px;color:black" href=https://drive.google.com/file/d/1TixL2oKq6ovAcuvRmRGPyTb0DLo3W8qv/view?usp=sharing>Click here to download my full resume</li></p>
+    <p> <a style="font-size:15px;color:black" href=https://drive.google.com/file/d/1Ioc7QtrBHqdfxOxWESjrUufZVN1PNcdp/view?usp=sharing=>Click here to download my full resume</li></p>
   </div>
 </div>
 <div class="section" id="Dance">
