--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About Me</div>
-            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a Business Consultant at a Big 4 consulting firm, Dancer/Choreographer and Content Creator from New York City. Interested in opportunities related to dance, social impact, and product management. Please feel free to <a href="nylaivy.thompson@gmail.com" target="_blank">contact me here</a> for any inquiries.</p>
+            <p>Hello and welcome to my website! I am Nyla Ivy Thompson - a Business Consultant at a Big 4 consulting firm, Dancer/Choreographer and Content Creator from New York City. Interested in opportunities related to dance, social impact, and product management. Please feel free to <a href="#Contact" target="_blank">contact me here</a> for any inquiries.</p>
 
     </div>
   </div>
